--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
 		"build": "vue-cli-service build",
 		"build-bundle": "vue-cli-service build --target lib --name kids-ui ./src/index.js",
 		"test": "vue-cli-service test:unit",
-		"lint": "vue-cli-service lint"
+		"lint": "vue-cli-service lint",
+		"lint:fix": "vue-cli-service lint --fix"
 	},
 	"dependencies": {
 		"colorthief": "^2.3.2",
