--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
 		"prepare": "husky install"
 	},
 	"dependencies": {
+		"colorthief": "^2.3.2",
 		"core-js": "^3.6.5",
+		"html2canvas": "^1.3.2",
+		"tinycolor2": "^1.4.2",
 		"vue": "^2.6.11"
 	},
 	"devDependencies": {
